--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,10 @@
   </head>
   <body>
     <!-- ❗️❗️❗️ Add partials like so for every page -->
-    <include src="./partials/example.html"></include>
+    <include src="./partials/bio.html"></include>
+    <include src="./partials/projects.html"></include>
+    <include src="./partials/education.html"></include>
+    <include src="./partials/progress.html"></include>
+    <include src="./partials/aside.html"></include>
   </body>
 </html>
