--- a/src/index.html
+++ b/src/index.html
@@ -8,11 +8,10 @@
     <script type="module" src="./index.js"></script>
   </head>
   <body>
-    <!-- ❗️❗️❗️ Add partials like so for every page -->
-    <include src="./partials/bio.html"></include>
-    <include src="./partials/projects.html"></include>
-    <include src="./partials/education.html"></include>
-    <include src="./partials/progress.html"></include>
-    <include src="./partials/aside.html"></include>
+    <include src="./partials/link-button.html"></include>
+    <main>
+      <include src="./partials/page-1.html"></include>
+      <include src="./partials/page-2.html"></include>
+    </main>
   </body>
 </html>
