--- a/src/index.html
+++ b/src/index.html
@@ -14,10 +14,15 @@
     <script type="module" src="./index.js"></script>
   </head>
   <body>
-    <include src="./partials/link-button.html"></include>
-    <main>
-      <include src="./partials/page-1.html"></include>
-      <include src="./partials/page-2.html"></include>
-    </main>
+    <div class="flex-aside">
+      <div class="main-content">
+        <include src="./partials/link-button.html"></include>
+        <div class="pages">
+          <include src="./partials/page-1.html"></include>
+          <include src="./partials/page-2.html"></include>
+        </div>
+      </div>
+      <include src="./partials/aside.html"></include>
+    </div>
   </body>
 </html>
