added list pages

--- a/src/index.html
+++ b/src/index.html
@@ -11,18 +11,18 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./sass/index.scss" />
-    <script type="module" src="./index.js"></script>
   </head>
   <body>
     <div class="flex-aside">
-      <include src="./partials/link-button.html"></include>
       <div class="main-content">
-        <div class="pages">
-          <include src="./partials/page-1.html"></include>
-          <include src="./partials/page-2.html"></include>
-        </div>
-      </div>
-      <include src="./partials/aside.html"></include>
+        <include src="./partials/link-button.html"></include>
+
+        <include src="./partials/page-1.html"></include>
+        <include src="./partials/aside.html"></include>
+
     </div>
+          <include src="./partials/page-2.html"></include>
+
+    <script type="module" src="./link-button.js"></script>
   </body>
 </html>
