--- a/src/index.html
+++ b/src/index.html
@@ -24,5 +24,6 @@
           <include src="./partials/page-2.html"></include>
 
     <script type="module" src="./link-button.js"></script>
+    <script type="module" src="./parse-projects.js"></script>
   </body>
 </html>
