--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,6 @@
     </div>
           <include src="./partials/page-2.html"></include>
 
-    <script type="module" src="./link-button.js"></script>
-    <script type="module" src="./parse-projects.js"></script>
+    <script type="module" src="index.js"></script>
   </body>
 </html>
