have some idea.

--- a/src/index.html
+++ b/src/index.html
@@ -25,5 +25,6 @@
 
     <script type="module" src="./link-button.js"></script>
     <script type="module" src="./parse-projects.js"></script>
+    <!-- <script type="module" src="./progress-status.js"></script> -->
   </body>
 </html>
