--- a/src/index.html
+++ b/src/index.html
@@ -19,9 +19,9 @@
 
         <include src="./partials/page-1.html"></include>
         <include src="./partials/aside.html"></include>
-
+      </div>
+      <include src="./partials/page-2.html"></include>
     </div>
-          <include src="./partials/page-2.html"></include>
 
     <script type="module" src="./link-button.js"></script>
     <script type="module" src="./parse-projects.js"></script>
